--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,7 +360,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/home/background.JPG") top center;
   background-size: cover;
   position: relative;
 }
@@ -686,7 +686,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.8)), url("../img/cta-bg.jpg") center center;
+  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.8)), url("../img/home/cta.JPG") center center;
   background-size: cover;
   padding: 60px 0;
 }
