--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -936,122 +936,6 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Pricing
---------------------------------------------------------------*/
-.pricing .box {
-  padding: 20px;
-  background: #f9f9f9;
-  text-align: center;
-  border-radius: 8px;
-  position: relative;
-  overflow: hidden;
-  border: 2px solid #f9f9f9;
-}
-
-.pricing .box h3 {
-  font-weight: 400;
-  padding: 15px;
-  margin-top: 15px;
-  font-size: 20px;
-  font-weight: 600;
-  color: #493c3e;
-}
-
-.pricing .box h4 {
-  font-size: 42px;
-  color: #e43c5c;
-  font-weight: 500;
-  font-family: "Open Sans", sans-serif;
-  margin-bottom: 20px;
-}
-
-.pricing .box h4 sup {
-  font-size: 20px;
-  top: -15px;
-  left: -3px;
-}
-
-.pricing .box h4 span {
-  color: #bababa;
-  font-size: 16px;
-  font-weight: 300;
-}
-
-.pricing .box ul {
-  padding: 0;
-  list-style: none;
-  color: #493c3e;
-  text-align: center;
-  line-height: 20px;
-  font-size: 14px;
-}
-
-.pricing .box ul li {
-  padding-bottom: 16px;
-}
-
-.pricing .box ul i {
-  color: #e43c5c;
-  font-size: 18px;
-  padding-right: 4px;
-}
-
-.pricing .box ul .na {
-  color: #ccc;
-  text-decoration: line-through;
-}
-
-.pricing .box .btn-wrap {
-  padding: 15px;
-  text-align: center;
-}
-
-.pricing .box .btn-buy {
-  display: inline-block;
-  padding: 8px 40px 10px 40px;
-  border-radius: 50px;
-  border: 2px solid #e43c5c;
-  color: #e43c5c;
-  font-size: 14px;
-  font-weight: 400;
-  font-family: "Nunito", sans-serif;
-  font-weight: 600;
-  transition: 0.3s;
-}
-
-.pricing .box .btn-buy:hover {
-  background: #e43c5c;
-  color: #fff;
-}
-
-.pricing .recommended {
-  border-color: #e43c5c;
-}
-
-.pricing .recommended .btn-buy {
-  background: #e43c5c;
-  color: #fff;
-}
-
-.pricing .recommended .btn-buy:hover {
-  background: #d91e42;
-  border-color: #d91e42;
-}
-
-.pricing .recommended-badge {
-  position: absolute;
-  top: 5px;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 1;
-  font-size: 13px;
-  padding: 3px 25px 6px 25px;
-  background: #fce6ea;
-  color: #e43c5c;
-  border-radius: 50px;
-}
-
-/*--------------------------------------------------------------
 # F.A.Q
 --------------------------------------------------------------*/
 .faq {
@@ -1208,6 +1092,46 @@ section {
 .team .member:hover .social {
   opacity: 1;
 }
+
+/*--------------------------------------------------------------
+# Partner
+--------------------------------------------------------------*/
+.partner-logo {
+  display: grid;
+  grid-template-columns: 25% 25% 25%;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.partner-logo a {
+  padding: 1rem;
+  margin: 1rem;
+}
+
+.partner-logo a:hover {
+  background: linear-gradient(#e43c5c, #dc687d);
+  color: white;
+  border-radius: 8px;
+}
+
+.partner-logo img {
+  width: 12rem;
+  height: 9rem;
+  border-radius: 8px;
+}
+
+.partner-logo h4 {
+  margin-top: 2rem;
+  font-weight: bold;
+}
+
+@media (max-width: 48rem) {
+  .partner-logo {
+    grid-template-columns: 80%;
+  }
+}
+
 
 /*--------------------------------------------------------------
 # Contact
